# LocalTune

./: .editorconfig  .env.example  README.md  components.json  database-types.ts  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.next/: build-manifest.json  fallback-build-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
.next/standalone/: package.json  server.js
.next/types/: validator.ts
app/: page.tsx
app/playlist/: page.tsx
app/settings/: page.tsx
backend/: .gitignore  package-lock.json  package.json
backend/server/: constants.ts  database.ts  server.js  server.ts
components/audio/: audio-full-width-card.tsx  audio-queue.tsx  audio-small-horizontal-card.tsx
components/player/: horizontal-full-player.tsx
components/playlist/: playlist-card.tsx  playlist-sidebar.tsx  playlist-small-horizontal-card.tsx
components/search/: search-bar.tsx
components/ui/: badge.tsx  button.tsx  field.tsx  scroll-area.tsx
frontend/: README.md  database-types.ts  main.js  package-lock.json  package.json  types.ts
frontend/app/: globals.css  (+3 more)
localtune/: next.config.ts  package-lock.json  package.json  types.d.ts
src/: Functions.ts  Types.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  mod.rs  settings.rs  spotify.rs
src-tauri/src/database/: sqlite.rs
src-tauri/src/utils/: metadata.rs  mod.rs
tauri-migration/: package-lock.json  package.json  types.ts  vite.config.ts
(+742 files in other folders)
